--- a/Assets/CSS/style.css
+++ b/Assets/CSS/style.css
@@ -17,22 +17,26 @@ header {
 }
 p {
     color: #777777;
+    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
 }
 h1 {
     color: #4aaaa5;
+    font-family: 'Georgia', Times, Times New Roman, serif;
 }
 h2 {
     color: #4aaaa5;
+    font-family: 'Georgia', Times, Times New Roman, serif;
 }
 
 /* for portfolio page*/
 body {
     font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif;
-    background-color: #dddddd;   
+    background-color: #dddddd;    
+    
 }
 #headerP{
     background-color: #ffffff;
-    border-color:#cccccc;
+    border-bottom:2px solid #777777;
     font-family:'Georgia', Times, Times New Roman, serif;
     height: 50px;
     display: block;
@@ -45,8 +49,12 @@ body {
     position: relative;
     margin-left: 5px;
     /* margin-right:5px; */
-
 }
+#linksH {
+    position: absolute;
+    right: 75px;
+}
+
 /* default link */
 #headerP a {
     color: #777777 ;
@@ -65,7 +73,7 @@ body {
     color: pink;
 }
 #headerP #myName {
-    left: 50px;
+    left: 80px;
     background-color: #4aaaa5;
     width: 100px;
     height: 100%;
@@ -73,7 +81,7 @@ body {
     position: absolute;
     z-index: 3;
     bottom:0px;
-    font-family: 'Sacramento';
+    /* font-family: 'Sacramento' !important; */
 }
 #headerP #myName.text{
     display: flex;
@@ -85,12 +93,17 @@ body {
 }
 #sectionP {
     background-color: #ffffff;
-    height: 960px;
+    height: 300px;
     width: 960px;
     /* display: block; */
     border-color: #dddddd;
    /*margin top and bottom 0, left and right split evenly */
     margin: 0 auto;
+    padding: 15px;
+    margin-top: 20px;
+}
+#articleP p{
+    line-height: 24px;
 }
 #profilePic {
     height: 200px;
@@ -146,11 +159,19 @@ body {
     height: 100%;
     background-color: white;
     margin: 0 auto;
+    margin-bottom: 50px;
     display:flex;
     justify-content: center;
     padding: 0 auto;
     text-align: center;
+}
 
+.white-bg {
+    background: white;
+    width: 960px;
+    margin: 0 auto;
+    padding: 15px;
+    margin-top: 20px;
 }
 #tableName {
    /* display: flex;
@@ -199,20 +220,31 @@ body {
     display: flex;
     flex-direction: column;
     background-color: #ffffff;
-    border-color: #dddddd; 
+    border-color: #dddddd;
+    padding:15px;
+    margin-top: 20px;
 }
 #submitF{
-    width: 53px;
+    width: 60px;
+    height: 45px;
     background-color: #4aaaa5;
+    color: white;
 }
+#emailF{
+    width: 100%;
+}
+#nameF{
+    width:100%;
+}
+
 textarea{
     height:200px;
-    width:70%
+    width:100%;
 }
 #mainF span {
     color: #777777;
     display: block;
-    font-display: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
 }
 
 
@@ -220,7 +252,7 @@ textarea{
 
 
 
-
+/* ignore!!!! for another project */
 /*student bio page */
 #lovePic {
     height: 200px;
